2009-02-23  Tor Lillqvist  <tml@novell.com>

	Bug 570501 - g_win32_get_system_data_dirs uses invalid conversion
	of function pointer to object pointer

	* glib/gutils.c (g_win32_get_system_data_dirs_for_module): Change
	the type of the function's parameter to be explicitly a function
	pointer.

	* glib/gutils.h (_g_win32_get_system_data_dirs): Modify
	declaration and the only caller, the inline
	_g_win32_get_system_data_dirs(), accordingly. Add comments
	pointing out these are internal GLib functions.

2009-01-12  Tor Lillqvist  <tml@novell.com>

	* glib/goption.c (parse_arg): Guard against a mis-written
	GOptionArgFunc that has returned FALSE but not set the GError.

2008-01-09  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2008-01-09  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.18.4 ===

2008-01-09  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2009-01-09  Tor Lillqvist  <tml@iki.fi>

	Bug 567138 - get_package_directory_from_module() does not free its
	lock when failing

	* glib/gwin32.c (get_package_directory_from_module): Obvious fix.

2009-01-09  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 564210 – SUN Studio 12 has supported visibility attribute

	* configure.in: Use visibility attribute for new enough sun cc.
	Patch by Chris Wang

2009-01-05  Tor Lillqvist  <tml@iki.fi>

	Bug 566348 - g_file_open_tmp uses the wrong g_mkstemp on win32

	* glib/gfileutils.c: Move the binary compatibility versions of
	g_file_test(), g_file_get_contents(), g_mkstemp() and
	g_file_open_tmp() last in the file. Remove the restriction that
	the XXXXXX is last in the template in the binary compatibility
	version of g_mkstemp(). Thanks to Morten Welinder and Jody
	Goldberg.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	bug 562562 – glib-2-18 branch does not build because g_assert_error 
	is used in tests

	* glib/tests/option-context.c: Fix the build. Complaint by Wouter
	Bolsterlee
